# vsc-sfml-gcc-boilerplate

./: CMakeLists.txt  README.md
src/: main.cpp
